# halp

./: .env.example  .gitignore  INSTALLATION.md  LICENSE  README.md  RUBBER_DUCKY.md  TESTING.md  TODO.md  halp  halp.py  install  install.sh  pyproject.toml  run_tests  test_output.txt
src/halp/: VERSION.py  __init__.py  api.py  chat.py  cli.py  config.py  logging_utils.py  tools.py  ui.py
