[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "halp"
description = "AI assistance for the command line"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["version"]

[project.scripts]
halp = "halp.cli:main"

[tool.setuptools]
license-files = ["LICENSE*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "halp.VERSION.VERSION"}
